[package]
name = "ysockaddr"
version = "0.1.0"
edition = "2021"
description = "Integration between SockAddr and C sockaddr"
homepage = "https://github.com/yaws-rs/ylibc"
keywords = ["ffi", "libc", "socket"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/ylibc"
categories = ["science"]
#exclude = ["assets/"]

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }

[dev-dependencies]
rstest = { version = "0.19" }

[package.metadata.docs.rs]
features = ["std"]
